sorting of words upto page no. 273 are complete

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1,6 +1,9 @@
+%\begin{multicols}{2}
 \begin{center}
 {\huge\bfseries anubaMdha - 1}
 \end{center}
+
+\medskip
 
 \begin{entry}
 \word{aDaDxNige}
@@ -174,6 +177,13 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \end{entry}
 
 \begin{entry}
+\word{uBayadaMga EkiVkaravAguvudu}
+\src{va}
+\meaning{\arthanonum{aMganalilx heVge AtamxnidAdxnoV, hAge parxpaMcaveMba vasutxvinalilxyU Atamx\-nidAdxne. avaneV vishAvxtamx athavA parashiva. parashivanige vishavxvu heVge oMdu aMgavoV, hAgeyeV mAnavana AtamxvU oMdu aMga. aMdare, parashivanige mAnavara Atamx matutx vishavx eMba eraDu aMgagaLive; alalxde namamx AtamxvU vishAvxtamxvU oMdeV (uBaya aMgagaLalilxruvudu EkiVkarisutatxde):}
+\ullekha{uBayavanariva citatxkekx arive iSaTxliMgakekx gotutx. uBayadaMga EkiVkaravAdalilx jala balidu shukitxyAdaMte, karaMDagaBaRdalilx balidu karaMDavano[De]daridaMte, aMgadalilxdadxridu, GanaliMgavanariyabeVku (savasaM. 9; shivaleM. 241-78).}}
+\end{entry}
+
+\begin{entry}
 \word{uriyuMDa kapuRra}
 \src{va}
 \meaning{\arthanonum{uriyuMDa kapURravu heVge tAnu ilalxvAgi uriye AgutatxdeyoV, hAgeyeV liMgadalilx aikayxvAda aMgavU tananxtanavanunx kaLedukoMDu liMgaveV Agutatxde:}
@@ -191,6 +201,8 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 
 %%%e
 
+
+
 \begin{entry}
 \word{eMjalusUtaka}
 \src{va}
@@ -198,6 +210,49 @@ dAvxviMshateVH parasAyxsayx budidhxtatatxvXsayx kAraNamf ||
 \ullekha{shivamaMtarx saMsAkxravilalxda tanuBavigaLu tananx liMgakekx mADuvananxkakx Bavimisharxva kaLedeveMdeMtenabahudu? shivasaMsAkxravAgi jAti sUtaka jananasUtaka perxVtasUtaka rajasUsxtaka eMjalusUtakaveMba paMcasUtakavuLaLx BavigaLu tananx liMgakekx mADuvananxkakx Bavimisharxva kaLedeveMdeMtenabahudu (savasaM. 3; cenanxba. 163-49).}}
 \newmeaning{\ni{eMjalusUtaka: deV.|| tami. ecacx; mala, koDa, ecicx; telu. eMgili; goMdi, yeMgalf. malo. eMge. eMgeY - eMjalf + sUtaka}}
 \newmeaning{\arthanonum{\SEE{uciCxSaTxsUtaka}}}
+\end{entry}
+
+\begin{entry}
+\word{eMjalusUtakanirasana}
+\src{va}
+\meaning{\arthanonum{parxtiyoMdu vasutxvU {shivana} parxsAdaveMdu parigaNisidare alilx eMjaleMba BAvaveV iruvudilalx. namamx iMdirxyagaLU, rUparasAdi iMdirxyaviSayagaLU, aMtaHkaraNa catuSaTxyagaLU, parashivana parxsAda eMba BAvadiMda noVDidare eMjaleMba BAvakekx eDeyeV iruvudilalx. hAge BAvisuvudeV eMjalusUtaka nirasana:} \ullekha{kamaRkAMDi liMgabAhayxru vatiRsuvaMtha eMjalusUtakanirasanada vacanavadeMteMdoDe: shirxVguruvina karuNakaTAkaSxkaqpAnaMdadiMda tanumana shudadhx sidadhxvilalxde... liMgajaMgama parxsAdaBoVgoVpaBoVgigaLige eMjalasUtakavelilxhadoV (savasaM. 14; mumukitx. 55-57).}}
+\end{entry}
+
+\begin{entry}
+\word{eraDaLida Ekarasa}
+\src{va}
+\meaning{\arthanonum{anuBAvadalilx aMgavu liMgadalilx oMdAgi, tAnu beVre liMga (parashiva) beVre eMba BinanxBAvavanunx kaLedukoLuLxtatxde. vAsatxvikavAgi A samayadalilx tAnu matutx liMga oMdeV eMba adevxYta BAva baradidadxrU, jAgaqta sithxtige baMda naMtara tAnu liMgadalelxV idedxneMdu aMganige anisutatxde. I riVtiya anuBavagaLu avanige padeV padeV uMTAdare avanige jAgaqta sithxtiyalUlx anuBAvada sithxtiyalUlx adevxYta sithxtiyeV uMTAgi, tAneMba aMga (aMsha) BAva hoVgi liMga (pUNaR) BAva mAtarx uLiyutatxde:} \ullekha{shivagaNaMgaLelalx parashivaliMgakala tamagu Binanxvilalxde... aBinanxsavxrUpadiMda eraDaLidu EkarasavAgi puSapx parimaLadaMte, nija shiva samAdhiyalilx beragu hoVdaru noVDA (savasaM. 10; gurusi. 690-381).}}
+\end{entry}
+
+%\begin{entry}
+%\word{E}
+%\src{saM}
+%\end{entry}
+
+\begin{entry}
+\word{Ekacitatx manoVBAvi}
+\meaning{\arthanonum{liMgadiVkeSxyanunx paDedanaMtara sAdhakanu liMgadalilx vishAvxsavanunx, niSeThxyanUnx toVrisabeVku. iMtha sAdhakaneV EkacitatxmanoVBAvi. ivanige muKayxvAda eraDu guNagaLirabeVku: (1) liMgaperxVmiyAda baLika vAyxvahArika viSayagaLa BArxMtiyilalxdirabeVku, (2) liMgavanunx mAtarx neneyabeVku. anayxdeYva pUje vajayxR:}}
+\newmeaning{\ni{EkaM ca tatf citatxM ca EkacitatxM manasaH BAvaH manoVBAvaH Ekacitatxsayx manoVBAvaH asayx asitx iti - EkacitatxmanoVBAviV}}
+\end{entry}
+
+\begin{entry}
+\word{EkamuKadalilx niravayajapa}
+\src{va}
+\meaning{\arthanonum{Bakatxsathxlada sAdhakanalilx aMga matutx liMgaveMba devxYtavirutatxde. Ata aikayxsithxtiyanunx muTiTxdAga I BeVda ilalxvAgi avanu EkAgarxcitatxnAgi para\-shivananunx japisutAtxne:} \ullekha{EkamuKadalilx niravaya japa. divxmuKadalilx shakitx saMpakaRyoVga (savasaM. 8; parxsAdi. 29-15).}}
+\end{entry}
+
+\begin{entry}
+\word{Ekavasutx uBayaBeVdavAguvudu}
+\meaning{\arthanonum{saqSiTxya samayadalilx shUnayx eMba oMdeV cidavxsutx irutatxde. A cidavxsutxvina nenahiniMdAgi adaralilx (parashivanalilx) saqSiTx mADabeVkeMba iceCx uMTAgutatxde. A iceCx uMTAda kUDaleV A Ekavasutx pUjayx matutx pUjaka (liMgasathxla matutx aMgasathxla) eMba eraDu BeVdavuLaLx vasutxgaLAguvudu:}}
+\smallskip
+\begin{shl}
+upAsoyxVpAsakatevxVna savxyameVva divxdhA BaveVtf |\\[1pt]
+liMgasathxlamupAsayxM sAyxdaMgasathxlamupAsakamf ||
+\end{shl}
+\smallskip
+\pauthor{(a.sU., 2. 13)}
+\smallskip
+\newmeaning{\ullekha{Ekavasutx uBayaBeVdavAgi tirxvidha mAgaRvanAcarisi catuBARgavAgi paMcavakatxrXva avadharisidalilx shakitxya dharisida uBaya rUpu, shakitx nishacxyavAdalilx nijasavxrUpa (savasaM. 8; parxsAdi. 30-13).}}
 \end{entry}
 
 \begin{entry}
@@ -363,6 +418,48 @@ guheVshavxraliMgavu sadA sananxhitanu (savasaM. 2; alalxma. 188-60-61).
 %%%o
 
 \begin{entry}
+\word{oMdiMdirxya modalAgi aidiMdirxya kaDeyAda pArxNigaLu}
+\src{va}
+\meaning{\arthanonum{jeYnara parxkAra, iMdirxyagaLa saMKeyxya AdhArada meVle
+ pArxNigaLanunx vagiRVkarisalAgidudx, vacanakAraru A tatatxvXvanunx
+ opipxkoMDaMte kANutatxde. I tatatxvXda parxkAra, pArxNigaLanunx hiVge
+ vagiRVkarisalAgide:}}
+\smallskip
+\newmeaning{\artha{oMdeV iMdirxyavanunxLaLx pArxNigaLu : EkANu jiVvigaLige 
+ keVvala sapxshaRneVMdirxyavoMdeV idudx, uLida yAva
+ iMdirxya\-gaLilalx.}}
+\smallskip
+\newmeaning{\artha{huLagaLu, shaMKada huLa, jigaNe muMtAda pArxNigaLige
+ sapxshaRneVMdirxya matutx GArxNeVMdirxya eMba eraDeV
+ iMdirxyagaLirutatxve.}}
+\smallskip
+\newmeaning{\artha{tigaNe, heVnu, iruve, diVpada huLagaLu, muMtAda pArxNigaLige
+ sapxshaRneVMdirxya, GArxNeVMdirxya matutx nayaneVMdirxya eMba mUru
+  iMdirxyagaLirutatxve.}}
+\newmeaning{\artha{jeVnuhuLa, noNa, soLeLx muMtAda jiVvigaLige GArxNeVMdirxya,
+ nayaneVMdirxya, shorxVterxVMdirxya matutx rasaneVMdirxya eMba nAlukx
+iMdirxyagaLidudx adakekx tavxgiMdirxya (sapxshaRneVMdirxya)
+iruvudilalx.}}
+\smallskip
+\newmeaning{\artha{miVnu, mosaLe, hasugaLaMtha catuSApxdi, hakikx, koVti,
+ manuSayx I elalx pArxNigaLige meVle heVLida aidU
+ iMdirxya\-gaLirutatxve. kaDime iMdirxyagaLiruvudu pArxNivagaRda keLa 
+ aMtasatxnunx toVrisidare, hecucx iMdirxyagaLiruvudu pArxNigaLu
+ hecucx vikAsavAgiruvudara doyxVtakavAgide.}}
+\smallskip
+\newmeaning{\artha{ililx atayxMta hecucx saMKeyxya iMdirxyagaLanunxLaLx mAnava\-nige budidhxyU hecicxruvudariMda, avanige mAtarx unanxta dheyxVyagaLa
+ parxjecnxyirutatxde eMbudu gamanAhaR (va.pa.koV. 105).}}
+\newmeaning{\ullekha{mara giDa baLiLx dhAnayxMgaLa beLaselalxva taritaridu pArxNavakoMduMDu, shariVrava horeva doVSakekx inAnxvudu vidhiyayAyx, oMdiMdirxya modalAgi aidiMdirxya kaDeyAda jiVva jAladalilxde carAcaravelalx (savasaM. 1; basava. 1308-360).}}
+\end{entry}
+
+\begin{entry}
+\word{okukxdu mikukxdu}
+\src{va}
+\meaning{\artha{parxsAda; liMgakekx koTuTxdu (okukxdu) matutx hiMdirugi paDedudu (mikukxdu). eMdare okukxdu apiRta, mikukxdu parxsAda:}  \ullekha{okukxdu parxsAdaveMbaru, mikukxdu parxsAdaveMbaru, okukxdu mikukxdanelalx bekukx {koLaLxde}, okukxmikukx hoVguva paMcasakiVlana balalxDe guheVshavxraliMgadalilx Atane parxsAdi (savasaM. 2; alalxma. 1028-308).}
+\artha{okukxdu eMdare eDemADida parxsAda; mikukxdu eMdare jaMgamaru taqpatxrAgi mikukx uLida parxsAda. idanunx niSeThxyiMda sivxVkarisuveneMbuvavanu nicacxTasharaNa. idakUkx migilAgi okukxdeMdare kArayaniratakAya (tanu), mikukxdeMdare liMgApaRNakekx takukxdAda pArxNa. iveraDanUnx modalu liMgakekx apiRsi parxsAdavAgi sivxVkarisidAga shivanu parxsAda jiVviyAda A sharaNana aMtaraMgadalilxyeV anuBavakekx baruvanu:} \ullekha{okukxda mikukxda koMbeneMba nicacxTa sharaNana toVra ..... (savasaM. 3; cenanxba.).}}
+\end{entry}
+
+\begin{entry}
 \word{oMdumuKarudArxkeSx}
 \src{kA}
 \meaning{\arthanonum{oMdu kaDe {moneyAguLaLx} rudArxkiSx; EkamuKarudArxkiSx:}
@@ -372,6 +469,27 @@ guheVshavxraliMgavu sadA sananxhitanu (savasaM. 2; alalxma. 188-60-61).
 \end{entry}
 
 %%%ka
+
+\begin{entry}
+\word{kaMgaLa keYgaLalapiRsuvudu}
+\src{va}
+\meaning{\arthanonum{nAvu padAthaRvananxpiRsalu keYyanenxV upayoVgisutetxVve. Adare adhAyxtamxsAdhaneyalilx sididhx paDedavanu tananx kaNuNxgaLanenxV keYgaLaMte upayoVgisi rUpanunx apiRsutAtxne:}
+\ullekha{kaMgaLa keYgaLalapiRsuva, shorxVtarxda keYgaLalapiRsuva, nAsikada keYgaLalapiRsuva, jihevxya keYgaLalapiRsuva, tanuvina keYgaLa\-lapiRsuva, manada keYgaLalapiRsuva, keYgaLa keYyalapiRsuva, alalxlilx tAgida suKavanalalxlilx liMgApiRtava mADuvanAgi kUDalasaMgayayxnu Ata mahAparxsAdi (savasaM. 3; cenanxba. 308-100).}}
+\end{entry}
+
+\begin{entry}
+\word{kaMgaLa sUtaka hiMguvudu}
+\src{va}
+\meaning{\arthanonum{AdhAyxtimxka sAdhanege aDiDxmADuva daqshayxgaLanunx noVDabeVkeMba Aseyanunx hiMgisuvudu. liMgapUjeyiMda kaMgaLa sUtaka hiMgutatxde; hAge hiMgisidavanaSeTxV BakatxnAgutAtxne:} 
+\ullekha{kaMgaLa sUtaka hiMgiyalalxde BakatxnAgabAradu (savasaM. 8; manumu. 1030-349).}}
+\end{entry}
+
+\begin{entry}
+\word{kaMgaLiMdapiRsuvudu}
+\src{va}
+\meaning{\arthanonum{nAvu anuBavisuva rUpanunx shivanige modalu apiRsi, anaMtara nAvu anuBavisabeVku {eMbudu} parxsAdada athaRgaLalolxMdu. liMgakekx nAvu apiRsabeVkAdare kurUpanunx kaLedu surUpanunx liMgada baLi tegedukoMDu hoVgi, keYyiMda apiRsabeVkeMbudu idara athaRvalalx. surUpanunx kaNeNxV liMgakekx apiRsabeVku. Aga Bakatx elilxyU hoVgabeVkAgilalx. aMdare, manasisxnalelxV shivananunx nenedu, manasisxnalilxyeV rUpanunx apiRsidare, Aga kaNuNxgaLu liMgakekx surUpanunx apiRsidavu eMdathaR (va.pa.koV. 107):}
+\ullekha{kaMgaLiMda noVDi, kaMDu, aridu, kurUpa kaLedu, surUpavanu kaMgaLu liMgakakxpiRsuvalilx savxyaBAjanavoV? liMgaBAjanavoV A kAladali sUtakavilalx, doVSavilalx (savasaM. 3; cenanxba. 228-73).}}
+\end{entry}
 
 \begin{entry}
 \word{kataqR}
@@ -405,6 +523,105 @@ guheVshavxraliMgavu sadA sananxhitanu (savasaM. 2; alalxma. 188-60-61).
 \ullekha{niVroLagaNa kicicxge niVre tAyi... avu horahomimxdAga tAya tiMdu, tAvu taledoVruvaMte kuruhiMda arivanaritu arivu kuruhu naSaTxva mADi niMdalilxye, aiGaTadUra rAmeVshavxraliMga, aMgava aritu niMda nilavu (savasaM. 8; meremiM. 1347-463).}}
 %arasikoMDAgi baMdalilx... oMdu kuruhiMde jaridu liMgadalulxMTeMdu.. (savasaM. 12; deVshikeVM. ????); karaNaMgaLa nivaqtitxya... A kuruhiMde iMdirxyaMgaLu salesaMdu.. (savasaM. 7; dAsoVha. ????); niVroLagaNa kicicxge niVre tAyi avu horahomimxdAga tAya tiMdu, tAvu taledoVruvaMte kuruhiMda arivanaritu arivu kuruhu naSaTxva mADi niMdalilxye, aiGaTadUra rAmeVshavxraliMga, aMgava aritu niMda nilavu (savasaM. 8; meremiM. ????).
 \end{entry}
+
+\begin{entry}
+\word{kAya akAyadalilx aDaguvudu}
+\src{va}
+\meaning{\arthanonum{liMgAMga sAma\-rasayxda naMtara sAdhakana kAyadalilx aneVka badalAvaNe uMTAgutatxde. kAyada bayakegaLu kaDimeyAgutatxdeyalalxde, tananx kAyavu tananxdalalx adu shivanadeMdu parigaNisutAtxne. hiVge tAnu kAyavanunx kaLedukoMDu adanunx shivanalilx kANuvudeV `kAya akAyadalilx aDaguvudu' eninxsikoLuLxtatxde:}
+\ullekha{kAya akAyadalilx aDagi, jiVva nijiRVvadalilx aDagi, Barxme saMcAra\-vilalxde, mahAGanadalilx saMdu, uBayada saMdilalxde baMkeVshavxra liMgadalilx sale saMdavana olume (savasaM. 9; suMkabaM. 635-199).}}
+\end{entry}
+
+
+\begin{entry}
+\word{kAyaRnalalx kAraNanalalx}
+\src{va}
+\meaning{\arthanonum{nAvu yAvoMdu vasutx athavA GaTaneyanunx noVDidarU adakokxMdu kAraNa\-viraleV\-beVku enunxtetxVve. kAraNa yAvudeMdu namage sadayxkekx gotitxlalxdirabahudu, Adare kAraNavilalxda GaTanegaLilalx. adeV riVti yAvudeV oMdu GaTaneyanunx noVDidarU, idakekx kAyaR (pariNAma) iraleVbeVku eMdukoLuLxtetxVve. adara pariNAmagaLu namage sadayxkekx
+gotitxlalxdirabahudu. Adare pariNAmavilalxda GaTanegaLilalx.}}
+\newmeaning{\arthanonum{\qquad saqSiTx mADabeVkeMba iceCx parashivanalilx inUnx mUDade idAdxga aMdare, parashivanu shUnayxsithxtiyalilxdAdxga, avanu kAyaRnU alalx, kAraNanU alalx. saqSiTxsilalxvAdudariMda avanu kAyaRnalalx enunxvudeVnoV sariyeV. Adare avaneV elalxvanUnx saqSiTxsuvudariMda avananunx kAraNaneMdeVke kareyabAradu?}}
+\newmeaning{\arthanonum{\qquad saqSiTxyeV inUnx Agilalxde idAdxga athavA parashiva inUnx shUnayxsithxtiyalilxruvAga avanu saqSiTxkataR (kAraNa), jagatutx pariNAma eMdu heVLalu baruvudilalx. aMdare, saqSiTxyAda meVle I BeVda sAdhayxveV horatu, saqSiTxpUvaRdalilx yAva BeVdavU sAdhayxvilalx. I kAraNakAkxgi parashivanu kAyaRnU alalx, kAraNanU alalx, AdiyU alalx, anAdiyU alalx eMdu heVLutAtxre (vapakoV. 124-125):}
+\ullekha{ayayx! kAyaRnalalx kAraNanalalx noVDa! niravayashUnayxliMgamUtiR... iMdu uBayavaLidu beLaguva saMganabasavaNaNxna unamxnAgarxdali hoLevAta tAne noVDA! guheVshavxraliMgavu cenanxbasavaNaNx (savasaM. 2; alalxma. 781-218); kAyaRnalalx, kAraNanalalx, kalipxtanalalx, niviRkalipxtanalalx, nenahumAtarxdiMda jagava saqSiTxsideneMba BAva baNiteyavanalalx, idiriMge tAnilalx, tanage idirAgi oMdu vasutxvilalx, parxtiyilalxda parxtima, anupamamahima, ninanx niHkalaneMdeMbarayAyx, mahAliMgaguru shivasidedhxVshavxraparxBuveV (savasaM. 11; toVMTasi. 25-11).}}
+\newmeaning{\arthanonum{\SEE{Adi anAdi ilalxdaMdu}}}
+\end{entry}
+
+\begin{entry}
+  \word{kAlakamaRparxLayajiVvigaLu}
+  \src{va}
+\meaning{\arthanonum{saMsArabaMdhanakokxLa\-gAdavaru kAlakUkx, kamaRkUkx, parxLayakUkx oLagu. liMgAMga sAmarasayx paDedavaru kAlAtiVtaru, kamaRvanunx  suTaTxvaru, parxLayavAdAga avaru nAshavAguvudilalx. Adare deVha, 
+ budidhx, itAyxdi nAshavAdarU avaru matotxmemx huTuTxvudilalx (va.pa.koV. 125):}
+\ullekha{kAlakamaRparxLayajiVvigaLu tirxvidhasaMpananxrAgalarivare? (savasaM. 3; cenanxba. 356-113).}}
+\newmeaning{\ni{kAlasayx kamaR  kAlakamaR, tasayx kAlakamaRNaH parxlayaH  kAlakamaRparxlayaH, kAlakamaRparxlayaM yAvatf yeV jiVvaMti teV - kAlakamaRparxlayajiVvinaH}}
+\end{entry}
+
+\begin{entry}
+\word{kirxyApUje oDalAguvudu}
+\src{va}
+\meaning{\arthanonum{pUje matitxtara kirxyegaLanunx nAvu deYhikavAgi, aMdare  daqgogxVcaravAgi mADutetxVve. Adare kirxyApUjegaLanunx oDaliniMda  (haqdayadiMda) mADidAga, aMdare, paramAtamxnu elelxlilxyU vAyxpisiruvudariMda hAgU avaneV elalx vasutxgaLanUnx nimage koTiTxruvudariMda, avu elilxveyoV alilxMdaleV mAnasikavAgi avugaLanunx neYveVdayx mADidare hAgU tananxnunx tAneV apiRsikoMDare, aMthavanu matetx kirxyApUjegaLanunx mADaleVbeVkAgilalx (va.pa.koV. 132):}
+\ullekha{kirxyApUje oDalAda matetx pUjisalilalx. jAcnxnaneVtarx musuka tegeda matetx Enanu noVDalilalx (savasaM. 5; moVLima. 1163-346).}}
+\end{entry}
+
+\begin{entry}
+\word{kirxVyoLagidadx niSikxrXVvaMtaru}
+\src{va}
+\meaning{\arthanonum{niSakxlamxSa manasisxniMda nAvu kirxyeyanunx mADidarU, namage AgAmi {kamaR} uMTAguvudilalx. namamx sAdhAraNa kirxyegaLelalx kamaRvanunxMTumADuvaMthavAgidudx, niSakxlamxSa manasisxniMda mADida kirxyegaLu niSikxrXye\-gaLenisikoLuLxtatxve (va.pa.koV. 133):}
+\ullekha{kirxVyeMbudanAru balalxru? aMgaliMgaveMba saMdaLiyadudu kirxVyalalx, liMgajaMgamaveMba saMdaLiyadudu kirxVyalalx. apiRta anapiRtaveMba saMdaLiyadudu kirxVyalalx. alalx enalilalx iMtiV kirxVyoLagidadx niSikxrXVvaMtara toVrA (savasaM. 3; cenanxba. 1140-388).}}
+\end{entry}
+
+\begin{entry}
+\word{keYlAsaveMba BavasAgara}
+\src{va}
+\meaning{\arthanonum{sheYvasidAdhxMta matutx sAMparxdAyika veYSaNxva paMthagaLa parxkAra deVvaloVka (keYlAsa athavA veYkuMTha) pArxpitxyeV AdhAyxtimxka jiVvanada aMtima guri. Adare viVrasheYvaru paraloVkapArxpitxyanunx liMgAMga sAmarasayxkikxMta kaDimeyeMdu parigaNisutAtxre. idakekx kAraNaveMdare, keYlAsakekx hoVdavaru matayxRkekx matetx baruva sAdhayxteyuMTu. AdudariMda BUloVkavu kaDime suKavanunx koDuva BavasAgarada oMdu sathxLavAdare, keYlAsavu hecucx suKavanunx koDuva BavasAgarada matotxMdu BAga:}
+\ullekha{kAya samAdhiyanolelx, nenahu samAdhige nilelx, keYlAsaveMba BavasAgaravanolelx (savasaM. 8; moVLimA. 1665-571).}}
+%\ullekha{BakitxyeMba pitatx... keYlAsaveMbudeVno, paqthivxya meVloMdu moraDi.. (savasaM. 1; basava. ????); keYlAsa keYlAsaveMdu... keYlAsaveMbudoMdu BUmiyoLiruva hALubeTaTx.. (savasaM. 4; sidadhxrA. ????); basavaNaNx modalAda... mahA keYlAsaveMba beLiLxya beTaTxvaneVri.. (savasaM. 8; moVLimA. ????); guruBakatxnAdalilx... matayxR keYlAsaveMba kALumAtilalx.. (savasaM. 7; jeVDara. ????); kUTakekx kuruhAdudanariyade... keYlAsaveMba sUtarxda oLagige manasoVtiralAlx ?.. (savasaM. 5; moVLima. ????).}}
+\end{entry}
+
+%%%%%ga
+\begin{entry}
+\word{guruliMgada parxsananxtavx}
+\src{va}
+\meaning{\arthanonum{nAlageya tudiyalilx guru\-liMgavanunx parxtiSAThxpisi, liMgavu
+ modalu ruci noVDade tAnu rucisenu eMba parxtijecnx mADutAtxne; inUnx
+ muMduvaredu tananx nAlageyeV shivana
+ nAlage eMdu tiLiyutAtxne. nijavAgi taqpitxpaDuvavanu tAnalalx, parashiva
+ eMdu tiLiyutAtxne. avanu nijavAda parxsAdi. hiVge tanenxlalxvanUnx
+ modalu shivanigapiRsi, anaMtara tAnu BoVgisuva parxsAdiyu
+ guru liMgavanunx taqpitxpaDisutAtxne. I taqpitxyiMdAgi guruliMgavu
+ parxsananxgoMDu, maheVshananunx rasaneVMdirxyadiMda
+ mukatxgoLisutatxde (bayalugoLisutatxde) (va.pa.koV. 140):}
+\ullekha{AcAraliMgada parxsananxtavxdiMda Bakatx bayalAdanu. guruliMga parxsananxtavxdiMda maheVshavxra bayalAdanu (savasaM. 11; toVMTasi. 660-294).}}
+\end{entry}
+
+\begin{entry}
+\word{guruvanaritavaMge guruvilalx}
+\src{va}
+\meaning{\arthanonum{nijavAda guruveMdare anuBAvada mUlaka parashivananunx
+ aritavanu. hiVge aritavanu tananxnunx parashivanoMdige
+ samiVkarisikoLuLxtAtxne. I kAraNadiMdaleV guru matutx liMga
+ samAnaveMdu heVLuvudu. iMtha guruvAdavanaSeTxV itararige diVkeSx
+ koDabalalx, tatatxvXgaLanunx boVdhisabalalx.}}
+\newmeaning{\arthanonum{\qquad iMtha sAdhakanige matotxbabx guru beVkAguvudilalx. diVkeSx paDeyuvavanige tAnU liMgeYkayx (guru)
+ AgabeVkeMba udedxVsha irutatxde. I udedxVshavilalxda Bakatx
+ Bakatxnalalx. shivasAkASxtAkxravilalxda guru guruvalalx, avanu 
+ koDuva diVkeSx diVkeSxyalalx (ililx liMgavananxritavanu heVge 
+ liMgaveV AgutAtxnoV, hAgeyeV guruvananxritavanU guruveV
+ AgutAtxneMbudanunx gamanisabeVku):}
+\ullekha{guruvanaridavaMge guruvilalx liMgavanaridavaMge liMgavilalx (savasaM. 8; moVLimA. 1730-567).}}
+\end{entry}
+
+\begin{entry}
+\word{guruvAdaDe kAlilalxdiruvudu}
+\src{va}
+\meaning{\arthanonum{guru-liMga-jaMgama\-gaLige tanu, mana matutx dhanavanunx koDabeVku eMbudu viVrasheYva sidAdhxMta.  oMdu veVLe sAdhakaneV guruvina sithxtige Eridare, aMdare anuBAvada mUlaka shivasAkASxtAkxra paDedare, Aga avanu itarara seVve mADalu elilxgU hoVgabeVkAgilalx:}
+\ullekha{guruvAdaDe kAlilalxdirabeVku, liMgavAdaDe bAyilalxdirabeVku (savasaM. 8; moVLimA. 1733-568).}}
+\end{entry}
+
+%%%%Ga
+\begin{entry}
+\word{GArxNadiMda apiRsuvudu}
+\src{va}
+\meaning{\arthanonum{GArxNeVMdirxyadiMda nAvu dugaRMdha matutx sugaMdhagaLa vayxtAyxsavanunx tiLidu, parashivanige sugaMdhavananxSeTxV apiRsabeVku. vishAlAthaRdalilx I riVti vayxtAyxsa mADade elalxvanUnx shivanige apiRsabeVkeMdu {manasusx} mADidare, apiRsidudelAlx sugaMdhavAgi pariNamisutatxde. shivanige apiRsida {gaMdhada} pUvaRguNagaLu hoVgi, adu {shudadhx} gaMdha (sugaMdha) vAgutatxde. adanunx avanu liMgaviruvalilxge hoVgi, keYyiMda apiRsade, manasisxnalilxyeV liMgavanunx nenedu, manasisxniMdaleV adanunx liMgakekx apiRsutAtxne:} 
+\ullekha{`dugaRMdhava kaLedu sugaMdhavanu GArxNadiMda liMgakakxpiRsuvalilx savxyaBAjanavoV, liMgaBAjanavoV?' (savasaM. 3; cenanxba. 227-72).}}
+\end{entry}
+
 
 %%%ja
 \begin{entry}
@@ -448,3 +665,85 @@ aMgavidadxrU ilalxdaMte (va.pa.koV. 163).}}
 \meaning{\arthanonum{japamADuva vidhAna, karxma:}
 \ullekha{oMdu cACxvXsanishAvxsakekx oMdu japavirutatxde. iMtha oMbatutx ucACxvXsanishAvxsagaLAdalilx ciTiTx eMba hesaride. tAsige 900 japagaLAgatakakxdudx. aMdare oMdu nimiSakekx 15 japagaLa parxmANavirutatxde. gaMTege 900 japadaMte 24 gaMTege 21,600 japagaLAgutatxve. idu japada kaTaTxLe (shivAkoV. 131-298).}}
 \end{entry}
+
+\begin{entry}
+\word{jaMgamada pUvARsharxyava kaLeyuvudu}
+\src{va}
+\meaning{\arthanonum{obabx vayxkitx jaMgamanenisikoLaLxlu kAvibaTeTx, rudArxkiSxmAle itAyxdigaLanunx dharisidare sAladu. ivu keVvala bAhayx lAMCana. AdhAyxtimxka\-vAgi parivataRneyAda vayxkitxyu mAtarx jaMgamanenisikoLaLxbalalx. hiVge parivataRnegoLuLxva modalu avanobabx sAdhAraNa vayxkitx. I sAdhAraNa vayxkitxtavxveMba pUvARsharxyavanunx kaLedukoMDavanu itararige AdashaRnAda jaMgama:}
+\ullekha{jaMgamada pUvARsharxyava kaLedu punajARtanenisi pArxNaliMgavAda baLika kUDalacenanxsaMganalilx basavaneMba gaNeVshavxra (savasaM. 3; cenanxba. 6-5).}}
+\end{entry}
+
+\begin{entry}
+\word{jananada beVra kitotxrasuvudu}
+\src{va}
+\meaning{\arthanonum{nAvu ajAcnxna\-diMdAgi aneVka riVtiya kamaRgaLanunx mADi punajaRnamxkokxLagAgutetxVve. I hosa janamxdalilxyU matetx aneVka riVtiya kamaRgaLanunx mADi matetx punajaRnamxkekx oLagAgutetxVve. liMgAMgasAmarasayx paDedare nAvu punajaRnamx paDeyabeVkAgilalxvAdudariMda, jananada beVra kitutxhAkidaMtAguvudu. guru-liMga-jaMgamagaLa pAdoVdaka-parxsAdagaLa sivxVkAradiMda punajaRnamxviruvudilalx.}
+\ullekha{pAdoVdakava koMDa baLika, jananada beVra kitotxrasa\-beVku (savasaM. 8; maDimA. 465-176).}}
+\end{entry}
+
+
+\begin{entry}
+\word{jananavipinadAvAnala}
+\src{va}
+\meaning{\arthanonum{vipinadAvAnalaveMdare {kADina} beMki. kADige beMki hatitxdare, adu
+uriyutAtx hoVgi iDiV kADanenxV suDabahudu. hAgeyeV sAdhakanu nijavAda
+BakitxyananxLavaDisikoMDare, adu avana hiMdina janamxda
+kamaRgaLanenxlAlx suTuTx bUdi mADutatxde. Aga avanu matetx
+huTaTxbeVkAgilalx (va.pa.koV. 165):}
+\ullekha{jaMgamavAgi PalaveVnu, noVDi manaderedu mAtanADisi jananavipinadAvAnalavAgadananxkakx (savasaM. 4; sidadhxrA. 1741-495).}}
+\newmeaning{\ni{jananaM Eva vipinaM-janana vipinaM, tasayx, janana vipinasayx dAvAnalaH-jananalipinadAvAnalaH}}
+\end{entry}
+
+\begin{entry}
+\word{jaladoLagidaR kicucx}
+\src{va}
+\meaning{\arthanonum{niVrinoLage avinABAvasaMbaMdhadiMdiruva vaDaba eMba hesarina beMki. adilalxdidadxre niVru bisiyAguvudeV ilalx.
+purAtana BAratiVya dAshaRnikara parxkAra, paqthivx, jala, vAyu,
+ aginx matutx AkAsha eMba paMcaBUtagaLeV daqshayxgoVcara vishavx, 
+giDamara matutx pArxNigaLa shariVrakekx kAraNa. I BUtagaLige
+parxtiyoMdakUkx tananxdeV Ada vishiSaTx guNada jatege, itara BUtagaLa guNagaLU irutatxve. Adare (vishiSaTx) guNa
+parxdhAnavAgidudx, uLida guNagaLu amuKayxvAgirutatxve. udA:
+jalatatatxvXkekx rasaveV {parxdhAna} (vishiSaTx) guNavAdarU amuKayx
+guNagaLAda paqthivxya gaMdha, aginxya teVjasusx, AkAshada shabadx hAgU
+vAyuvina sapxshaRvU adaralilxrutatxve. niVrinoLage aginx
+ilalxdidadxre niVru bisiyAguvudeV ilalx; adaralilx vAyuvilalxdidadxre
+adakekx vAsane iruvudilalx. adaralilx AkAshatatatxvXvilalxdidadxre
+harivina juLujuLu shabadx horaDu\-vudeV ilalx:}
+\ullekha{jaladoLagaNa kicucx jalava suDade, jalavu tAnAgiyeV ididxtutx noVDA (savasaM. 2; alalxma. 3-4).}}
+\end{entry}
+
+\begin{entry}
+\word{jAcnxnada sUtaka hiMguvudu}
+\src{va}
+\meaning{\arthanonum{nAneV beVre, parashivaneV beVre eMba ajAcnxnaveV jAcnxnada
+ sUtaka. parashivanu elelxlilxyU idAdxne hAgU avananunx aMgada
+ parxti BAgadalilxyU parxtiSAThxpisabahudu eMba ariveV jAcnxnada
+ sUtakavanunx hiMgisuvudu. pArxNaliMgiyAgabeVkeMbuvavanu jAcnxnada
+ sUtaka hiMgisi\-koLuLxvudu Avashayxka:} \ullekha{jAcnxnada sUtaka hiMgiyalalxde pArxNaliMgiyAgabAradu (savasaM. 4; manumu. 1038-364).}}
+\end{entry}
+
+\begin{entry}
+\word{jAcnxnavilalxda pUje}
+\src{va}
+\meaning{\arthanonum{paramAtamxna savxrUpada jAcnxnavilalxde, yAMtirxkavAgi mADuva pUje:}
+\ullekha{jAcnxnavilalxda pUje, sadABxvavilalxda Bakitx, dhAyxnavilalxda japa, ivu munanxvAyavahudakekx munanxveV manasaMditutx (savasaM. 8; manasaM. 905-316).}}
+\end{entry}
+
+\begin{entry}
+\word{jiVva nijiRVvadalilx aDaguvudu}
+\src{va}
+\meaning{\arthanonum{anuBAvadalilx aMganu liMgadalilx
+ liVnavAdAga, avanu tananx parxteyxVkateyanunx kaLedukoMDu,
+ jiVvanalalxda (`nijiRVva') parashivanoMdige aDagutAtxne (va.pa.koV. 168):}
+\ullekha{kAya akAyadalilx aDagi, jiVva nijiRVvadalilx aDagi, Barxme saMcAravilalxde, mahAGanadalilx saMdu, uBayada saMdilalxde baMkeVshavxraliMgadalilx sale saMdavana olume (savasaM. 9; suMkabi. 635-199).}}
+\end{entry}
+
+\begin{entry}
+\word{jiVvana parxkaqtiya maredapiRsuvudu}
+\meaning{\arthanonum{jiVvanu parxkaqtiya baMdhanadalilxruvudariMda, tAnu deVha,
+ aMtaHkaraNa, jAcnxneVMdirxya-kameRVMdirxyagaLa
+ adhiVnadalilxdedxVneMdu tiLidirutAtxne. vAsatxvavAgi
+ parxkaqtiyU saha {shivana} {shakitxya} rUpAMtarave. Adare parxkaqtiya
+ duguRNagaLanunx kaDime mADi, parxkaqtiyanUnx apiRsabahudu.}}
+\end{entry}
+
+%\end{multicols}
