--- a/tex-for-print/jss_consolidated1.tex
+++ b/tex-for-print/jss_consolidated1.tex
@@ -289,7 +289,8 @@ ciMtisuvudu ajAcnxnada kuruhAgutatxde. (va.pa.koV. 212)}
 \meaning{\arthanonum{nABiparxdeVshadalilxruva aidu valayagaLuLaLx maNipUrakacakarx. savaRsididhxparxdavAda kuMDaliniVshakitxyanunx I cakarxdalilx dhAyxna mADabeVku.}}
 \medskip
 \begin{shl}
-paMcAvataRM nABicakarxM sapARkArAM taTininxBAmf |\\[1pt]
+paMcAvataRM nABicakarxM sapARkvAgutatxde. I
+ipapxtotxMdu bageyaArAM taTininxBAmf |\\[1pt]
 tatarx kuMDaliniVshakitxM savaRsididhxparxdAM samxreVtf ||
 \end{shl}
 \medskip
