--- a/mainfile.tex
+++ b/mainfile.tex
@@ -24,7 +24,7 @@
 %\input jss_consolidated1
 \input tex-for-print/jss-001-281
 \newpage
-\input tex-for-print/anubandha-1.tex
+%\input tex-for-print/anubandha-1.tex
 %\input tex-for-print/letter_ma
 %\newpage
 %\input 002
